@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 55e9ab1ac5448d786f93546fbffbaceecd9bc3ec ChangeLog
+SHA1 4557b739c0d4fa5bba44c139155a11300cf36416 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 5bccdbf05fac6975c20fcd98bbed2f9f9da00445 META.yml
-SHA1 2e43732b2e7f87c80568c05d0c88355f270246a5 MYMETA.json
-SHA1 bba40326d84e2593c68450442118d1c7aea2ec1d MYMETA.yml
-SHA1 5beef957016150385002b9d0079d919c31c8e437 Makefile.PL
+SHA1 afb7f14388c6cd62203c5c9702372ace062ba627 META.yml
+SHA1 6287d6e4daec995b2a8da09855cdb526e33c3645 MYMETA.json
+SHA1 7c0ab97624b93494f117c6b7a7fb7df3e942d81f MYMETA.yml
+SHA1 caa10a8668423837728bdcbe81ecc981c4355170 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 16eb2bcf54836bf417e2c5d9972e2fbd1ea4744b install_mozrepl_plugin.ahk
-SHA1 238e2d6116296e0661c5538a0d3b49ab8532aa6f lib/Net/FullAuto.pm
+SHA1 4f9fd0d7d4af399c6e2b9cc5280244982bc086b9 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEP/WQACgkQJM3IZYB6aOrcmACfSfsfoAAxA6uSCBoYRj12zWxZ
-aywAnjUCGIYxl/SI9DUdVBQS83KSutR3
-=2o53
+iEYEARECAAYFAlERZ9AACgkQJM3IZYB6aOqq0QCfbqLaDZqLiiBLHLOJ2YNjK8HV
+RxEAn0Kc7nBrm93xht2wZXQKGzgNqARg
+=k0fh
 -----END PGP SIGNATURE-----
